# ToDo-List

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: factories.py
tests/board/: test_board_create_view.py
tests/category/: test_category_create_view.py
todolist/: settings.py  urls.py
todolist/bot/: models.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_tg_user_model.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0004_goalcomment.py  0006_board_alter_goalcomment_options_goalcategory_board_and_more.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py
